@@ -3,8 +3,7 @@ package com.maan.common.util;
 import java.io.UnsupportedEncodingException;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
-import sun.misc.BASE64Encoder;
-import sun.misc.CharacterEncoder;
+import java.util.Base64;
 
 import com.maan.common.util.SystemUnavailableException;
 
@@ -32,7 +31,7 @@ public final class PasswordService
     }
 
     byte raw[] = md.digest(); //step 4
-    String hash = (new BASE64Encoder()).encode(raw); //step 5
+    String hash = new String (Base64.getEncoder().encode(raw)); //step 5
     return hash; //step 6
   }
   
